--- a/project/main/main.ipynb
+++ b/project/main/main.ipynb
@@ -303,14 +303,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/2 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 2/2 [00:00<00:00, 11.26it/s]\n"
+      "100%|██████████| 2/2 [00:00<00:00, 11.60it/s]\n"
      ]
     },
     {
@@ -402,8 +395,8 @@
     {
      "data": {
       "text/plain": [
-       "{1: <single_cat_model.SingleCategoryModel at 0x16365fbd0>,\n",
-       " 2: <single_cat_model.SingleCategoryModel at 0x16417a010>}"
+       "{1: <single_cat_model.SingleCategoryModel at 0x16b078410>,\n",
+       " 2: <single_cat_model.SingleCategoryModel at 0x177cf5bd0>}"
       ]
      },
      "execution_count": 5,
@@ -467,9 +460,9 @@
       "Root Mean Squared Error (RMSE): 452.2156\n",
       "R² Score: 0.8733\n",
       "Pearson Correlation (Full Dataset): 0.9457\n",
-      "Pearson Correlation (Sample Size 100): 0.9984\n",
-      "Pearson Correlation (Sample Size 1000): 0.8830\n",
-      "Pearson Correlation (Sample Size 10000): 0.9440\n",
+      "Pearson Correlation (Sample Size 100): 0.9978\n",
+      "Pearson Correlation (Sample Size 1000): 0.9971\n",
+      "Pearson Correlation (Sample Size 10000): 0.9472\n",
       "Pearson correlation plot saved to ./validation_plots/cat_1_pearson.png\n",
       "\n",
       "\n",
@@ -483,9 +476,9 @@
       "Root Mean Squared Error (RMSE): 452.2156\n",
       "R² Score: 0.8733\n",
       "Pearson Correlation (Full Dataset): 0.9457\n",
-      "Pearson Correlation (Sample Size 100): 0.9951\n",
-      "Pearson Correlation (Sample Size 1000): 0.9836\n",
-      "Pearson Correlation (Sample Size 10000): 0.9455\n",
+      "Pearson Correlation (Sample Size 100): 0.9997\n",
+      "Pearson Correlation (Sample Size 1000): 0.9754\n",
+      "Pearson Correlation (Sample Size 10000): 0.9457\n",
       "Pearson correlation plot saved to ./validation_plots/cat_2_pearson.png\n",
       "\n",
       "\n"
@@ -539,17 +532,17 @@
        "  'rmse': 452.2155996261745,\n",
        "  'r2': 0.8732726429267379,\n",
        "  'pearson_correlation_full': 0.9456589207734637,\n",
-       "  'sample_pearsons': {100: 0.9984008697262701,\n",
-       "   1000: 0.8829581747867876,\n",
-       "   10000: 0.9439721083480016}},\n",
+       "  'sample_pearsons': {100: 0.9977960280686196,\n",
+       "   1000: 0.9970809992728634,\n",
+       "   10000: 0.94717873166855}},\n",
        " 2: {'mae': 28.99447410787435,\n",
        "  'mse': 204498.94854526053,\n",
        "  'rmse': 452.2155996261745,\n",
        "  'r2': 0.8732726429267379,\n",
        "  'pearson_correlation_full': 0.9456589207734637,\n",
-       "  'sample_pearsons': {100: 0.9951397894653516,\n",
-       "   1000: 0.983551185154722,\n",
-       "   10000: 0.945535746586353}}}"
+       "  'sample_pearsons': {100: 0.9996690478731373,\n",
+       "   1000: 0.9753941201798361,\n",
+       "   10000: 0.9456995750516152}}}"
       ]
      },
      "execution_count": 8,
@@ -570,24 +563,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "ename": "CatBoostError",
-     "evalue": "/Users/zomb-ml-platform-msk/go-agent-21.2.0/pipelines/BuildMaster/catboost.git/catboost/libs/model/model.cpp:1885: Summation of symmetric and non-symmetric models is not supported [for now]",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mCatBoostError\u001b[0m                             Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[9], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m model\u001b[38;5;241m.\u001b[39mfinetune(test_1)\n\u001b[1;32m      3\u001b[0m metrics \u001b[38;5;241m=\u001b[39m model\u001b[38;5;241m.\u001b[39mvalidate(test_1)\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28mprint\u001b[39m(metrics)\n",
-      "File \u001b[0;32m~/Desktop/business/lolz/project/main/single_cat_model.py:314\u001b[0m, in \u001b[0;36mSingleCategoryModel.finetune\u001b[0;34m(self, df, use_crossval)\u001b[0m\n\u001b[1;32m    312\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m use_crossval:\n\u001b[1;32m    313\u001b[0m     X_train, X_test, y_train, y_test \u001b[38;5;241m=\u001b[39m train_test_split(X_train, y_train)\n\u001b[0;32m--> 314\u001b[0m     new_model\u001b[38;5;241m.\u001b[39mfit(X_train, y_train, eval_set\u001b[38;5;241m=\u001b[39m(X_test, y_test), verbose\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m, init_model\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmeta_model)\n\u001b[1;32m    315\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m    316\u001b[0m     new_model\u001b[38;5;241m.\u001b[39mfit(X_train, y_train, verbose\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m, init_model\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmeta_model)\n",
-      "File \u001b[0;32m~/miniconda3/envs/recsys/lib/python3.11/site-packages/catboost/core.py:5827\u001b[0m, in \u001b[0;36mCatBoostRegressor.fit\u001b[0;34m(self, X, y, cat_features, text_features, embedding_features, sample_weight, baseline, use_best_model, eval_set, verbose, logging_level, plot, plot_file, column_description, verbose_eval, metric_period, silent, early_stopping_rounds, save_snapshot, snapshot_file, snapshot_interval, init_model, callbacks, log_cout, log_cerr)\u001b[0m\n\u001b[1;32m   5824\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mloss_function\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;129;01min\u001b[39;00m params:\n\u001b[1;32m   5825\u001b[0m     CatBoostRegressor\u001b[38;5;241m.\u001b[39m_check_is_compatible_loss(params[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mloss_function\u001b[39m\u001b[38;5;124m'\u001b[39m])\n\u001b[0;32m-> 5827\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_fit(X, y, cat_features, text_features, embedding_features, \u001b[38;5;28;01mNone\u001b[39;00m, sample_weight, \u001b[38;5;28;01mNone\u001b[39;00m, \u001b[38;5;28;01mNone\u001b[39;00m, \u001b[38;5;28;01mNone\u001b[39;00m, \u001b[38;5;28;01mNone\u001b[39;00m, baseline,\n\u001b[1;32m   5828\u001b[0m                  use_best_model, eval_set, verbose, logging_level, plot, plot_file, column_description,\n\u001b[1;32m   5829\u001b[0m                  verbose_eval, metric_period, silent, early_stopping_rounds,\n\u001b[1;32m   5830\u001b[0m                  save_snapshot, snapshot_file, snapshot_interval, init_model, callbacks, log_cout, log_cerr)\n",
-      "File \u001b[0;32m~/miniconda3/envs/recsys/lib/python3.11/site-packages/catboost/core.py:2400\u001b[0m, in \u001b[0;36mCatBoost._fit\u001b[0;34m(self, X, y, cat_features, text_features, embedding_features, pairs, sample_weight, group_id, group_weight, subgroup_id, pairs_weight, baseline, use_best_model, eval_set, verbose, logging_level, plot, plot_file, column_description, verbose_eval, metric_period, silent, early_stopping_rounds, save_snapshot, snapshot_file, snapshot_interval, init_model, callbacks, log_cout, log_cerr)\u001b[0m\n\u001b[1;32m   2397\u001b[0m allow_clear_pool \u001b[38;5;241m=\u001b[39m train_params[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mallow_clear_pool\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n\u001b[1;32m   2399\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m plot_wrapper(plot, plot_file, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mTraining plots\u001b[39m\u001b[38;5;124m'\u001b[39m, [_get_train_dir(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mget_params())]):\n\u001b[0;32m-> 2400\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_train(\n\u001b[1;32m   2401\u001b[0m         train_pool,\n\u001b[1;32m   2402\u001b[0m         train_params[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124meval_sets\u001b[39m\u001b[38;5;124m\"\u001b[39m],\n\u001b[1;32m   2403\u001b[0m         params,\n\u001b[1;32m   2404\u001b[0m         allow_clear_pool,\n\u001b[1;32m   2405\u001b[0m         train_params[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124minit_model\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n\u001b[1;32m   2406\u001b[0m     )\n\u001b[1;32m   2408\u001b[0m \u001b[38;5;66;03m# Have property feature_importance possibly set\u001b[39;00m\n\u001b[1;32m   2409\u001b[0m loss \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_object\u001b[38;5;241m.\u001b[39m_get_loss_function_name()\n",
-      "File \u001b[0;32m~/miniconda3/envs/recsys/lib/python3.11/site-packages/catboost/core.py:1780\u001b[0m, in \u001b[0;36m_CatBoostBase._train\u001b[0;34m(self, train_pool, test_pool, params, allow_clear_pool, init_model)\u001b[0m\n\u001b[1;32m   1779\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m_train\u001b[39m(\u001b[38;5;28mself\u001b[39m, train_pool, test_pool, params, allow_clear_pool, init_model):\n\u001b[0;32m-> 1780\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_object\u001b[38;5;241m.\u001b[39m_train(train_pool, test_pool, params, allow_clear_pool, init_model\u001b[38;5;241m.\u001b[39m_object \u001b[38;5;28;01mif\u001b[39;00m init_model \u001b[38;5;28;01melse\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m)\n\u001b[1;32m   1781\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_set_trained_model_attributes()\n",
-      "File \u001b[0;32m_catboost.pyx:4833\u001b[0m, in \u001b[0;36m_catboost._CatBoost._train\u001b[0;34m()\u001b[0m\n",
-      "File \u001b[0;32m_catboost.pyx:4882\u001b[0m, in \u001b[0;36m_catboost._CatBoost._train\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;31mCatBoostError\u001b[0m: /Users/zomb-ml-platform-msk/go-agent-21.2.0/pipelines/BuildMaster/catboost.git/catboost/libs/model/model.cpp:1885: Summation of symmetric and non-symmetric models is not supported [for now]"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "An error occurred during finetuning: /Users/zomb-ml-platform-msk/go-agent-21.2.0/pipelines/BuildMaster/catboost.git/catboost/libs/model/model.cpp:1885: Summation of symmetric and non-symmetric models is not supported [for now]\n",
+      "\n",
+      "Regression Metrics:\n",
+      "\n",
+      "Mean Absolute Error (MAE): 28.9945\n",
+      "Mean Squared Error (MSE): 204498.9485\n",
+      "Root Mean Squared Error (RMSE): 452.2156\n",
+      "R² Score: 0.8733\n",
+      "Pearson Correlation (Full Dataset): 0.9457\n",
+      "Pearson Correlation (Sample Size 100): 0.9985\n",
+      "Pearson Correlation (Sample Size 1000): 0.9663\n",
+      "Pearson Correlation (Sample Size 10000): 0.9456\n",
+      "Pearson correlation plot saved to pearson_vs_samples.png\n",
+      "{'mae': 28.99447410787435, 'mse': 204498.94854526053, 'rmse': 452.2155996261745, 'r2': 0.8732726429267379, 'pearson_correlation_full': 0.9456589207734637, 'sample_pearsons': {100: 0.9985431313400233, 1000: 0.9662619919939525, 10000: 0.9456029638909101}}\n"
      ]
     }
    ],
