--- a/project/main/onnx_usage_example.ipynb
+++ b/project/main/onnx_usage_example.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -94,16 +94,16 @@
        "      <th>steam_pubg_inv_value</th>\n",
        "      <th>steam_cs2_inv_value</th>\n",
        "      <th>...</th>\n",
-       "      <th>steam_cs2_last_launched_minute</th>\n",
-       "      <th>steam_cs2_last_launched_second</th>\n",
-       "      <th>steam_cs2_last_launched_weekday</th>\n",
-       "      <th>inv_value_sum</th>\n",
-       "      <th>game_count_sum</th>\n",
-       "      <th>level_sum</th>\n",
-       "      <th>price_per_view</th>\n",
-       "      <th>total_steam_games</th>\n",
-       "      <th>total_playtime</th>\n",
-       "      <th>std_playtime</th>\n",
+       "      <th>steam_cs2_last_activity_is_weekend_0</th>\n",
+       "      <th>steam_cs2_last_activity_is_weekend_1</th>\n",
+       "      <th>steam_cs2_ban_date_is_weekend_0</th>\n",
+       "      <th>steam_cs2_ban_date_is_weekend_1</th>\n",
+       "      <th>steam_last_transaction_date_is_weekend_0</th>\n",
+       "      <th>steam_last_transaction_date_is_weekend_1</th>\n",
+       "      <th>steam_market_ban_end_date_is_weekend_0</th>\n",
+       "      <th>steam_market_ban_end_date_is_weekend_1</th>\n",
+       "      <th>steam_cs2_last_launched_is_weekend_0</th>\n",
+       "      <th>steam_cs2_last_launched_is_weekend_1</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -120,16 +120,16 @@
        "      <td>-1</td>\n",
        "      <td>130</td>\n",
        "      <td>...</td>\n",
-       "      <td>12.0</td>\n",
-       "      <td>27.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>1481</td>\n",
-       "      <td>203</td>\n",
-       "      <td>10</td>\n",
-       "      <td>4.814516</td>\n",
-       "      <td>125</td>\n",
-       "      <td>1101.26</td>\n",
-       "      <td>36.607566</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -144,16 +144,16 @@
        "      <td>-1</td>\n",
        "      <td>243</td>\n",
        "      <td>...</td>\n",
-       "      <td>34.0</td>\n",
-       "      <td>43.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>480</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>4.411765</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -168,16 +168,16 @@
        "      <td>-1</td>\n",
        "      <td>18</td>\n",
        "      <td>...</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>55.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>199</td>\n",
-       "      <td>17</td>\n",
-       "      <td>23</td>\n",
-       "      <td>10.869565</td>\n",
-       "      <td>9</td>\n",
-       "      <td>256.22</td>\n",
-       "      <td>67.700112</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -192,16 +192,16 @@
        "      <td>-1</td>\n",
        "      <td>0</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>112</td>\n",
-       "      <td>20</td>\n",
-       "      <td>3</td>\n",
-       "      <td>11.764706</td>\n",
-       "      <td>12</td>\n",
-       "      <td>14.21</td>\n",
-       "      <td>3.395692</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -216,20 +216,20 @@
        "      <td>-1</td>\n",
        "      <td>90</td>\n",
        "      <td>...</td>\n",
-       "      <td>44.0</td>\n",
-       "      <td>52.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>174</td>\n",
-       "      <td>11</td>\n",
-       "      <td>2</td>\n",
-       "      <td>4.800000</td>\n",
-       "      <td>8</td>\n",
-       "      <td>83.58</td>\n",
-       "      <td>30.862671</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 118 columns</p>\n",
+       "<p>5 rows × 676 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -254,31 +254,59 @@
        "3                    -1                    0  ...   \n",
        "4                    -1                   90  ...   \n",
        "\n",
-       "   steam_cs2_last_launched_minute  steam_cs2_last_launched_second  \\\n",
-       "0                            12.0                            27.0   \n",
-       "1                            34.0                            43.0   \n",
-       "2                            11.0                            55.0   \n",
-       "3                             0.0                             0.0   \n",
-       "4                            44.0                            52.0   \n",
+       "   steam_cs2_last_activity_is_weekend_0  steam_cs2_last_activity_is_weekend_1  \\\n",
+       "0                                  True                                 False   \n",
+       "1                                  True                                 False   \n",
+       "2                                  True                                 False   \n",
+       "3                                  True                                 False   \n",
+       "4                                  True                                 False   \n",
        "\n",
-       "   steam_cs2_last_launched_weekday  inv_value_sum  game_count_sum  level_sum  \\\n",
-       "0                              3.0           1481             203         10   \n",
-       "1                              3.0            480               2          0   \n",
-       "2                              4.0            199              17         23   \n",
-       "3                              0.0            112              20          3   \n",
-       "4                              4.0            174              11          2   \n",
+       "   steam_cs2_ban_date_is_weekend_0  steam_cs2_ban_date_is_weekend_1  \\\n",
+       "0                             True                            False   \n",
+       "1                             True                            False   \n",
+       "2                             True                            False   \n",
+       "3                             True                            False   \n",
+       "4                             True                            False   \n",
        "\n",
-       "   price_per_view  total_steam_games  total_playtime  std_playtime  \n",
-       "0        4.814516                125         1101.26     36.607566  \n",
-       "1        4.411765                  1            0.00      0.000000  \n",
-       "2       10.869565                  9          256.22     67.700112  \n",
-       "3       11.764706                 12           14.21      3.395692  \n",
-       "4        4.800000                  8           83.58     30.862671  \n",
+       "   steam_last_transaction_date_is_weekend_0  \\\n",
+       "0                                      True   \n",
+       "1                                      True   \n",
+       "2                                      True   \n",
+       "3                                     False   \n",
+       "4                                      True   \n",
        "\n",
-       "[5 rows x 118 columns]"
+       "   steam_last_transaction_date_is_weekend_1  \\\n",
+       "0                                     False   \n",
+       "1                                     False   \n",
+       "2                                     False   \n",
+       "3                                      True   \n",
+       "4                                     False   \n",
+       "\n",
+       "   steam_market_ban_end_date_is_weekend_0  \\\n",
+       "0                                    True   \n",
+       "1                                    True   \n",
+       "2                                    True   \n",
+       "3                                    True   \n",
+       "4                                    True   \n",
+       "\n",
+       "   steam_market_ban_end_date_is_weekend_1  \\\n",
+       "0                                   False   \n",
+       "1                                   False   \n",
+       "2                                   False   \n",
+       "3                                   False   \n",
+       "4                                   False   \n",
+       "\n",
+       "   steam_cs2_last_launched_is_weekend_0  steam_cs2_last_launched_is_weekend_1  \n",
+       "0                                  True                                 False  \n",
+       "1                                  True                                 False  \n",
+       "2                                  True                                 False  \n",
+       "3                                  True                                 False  \n",
+       "4                                  True                                 False  \n",
+       "\n",
+       "[5 rows x 676 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -296,32 +324,34 @@
     "df = pd.read_json('../data/dataset.json').drop(columns=['sold_price'])\n",
     "df = model_placeholder.preprocess_data(df=df)\n",
     "\n",
+    "df = df.drop(columns=['sold_price'], errors='ignore')\n",
+    "\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[0;93m2024-11-21 19:29:27.023491 [W:onnxruntime:, execution_frame.cc:870 VerifyOutputSizes] Expected shape from model of {-1} does not match actual shape of {129624,1} for output predictions\u001b[m\n"
+      "\u001b[0;93m2024-11-25 16:31:39.316231 [W:onnxruntime:, execution_frame.cc:870 VerifyOutputSizes] Expected shape from model of {-1} does not match actual shape of {129624,1} for output predictions\u001b[m\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Predictions: [[585.62506  ]\n",
-      " [ 67.792694 ]\n",
-      " [963.65906  ]\n",
+      "Predictions: [[575.0677  ]\n",
+      " [ 79.10138 ]\n",
+      " [984.645   ]\n",
       " ...\n",
-      " [435.72034  ]\n",
-      " [ -1.0241394]\n",
-      " [373.00357  ]]\n"
+      " [449.80392 ]\n",
+      " [  5.103546]\n",
+      " [393.7421  ]]\n"
      ]
     }
    ],
